<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bitfinex.bitapp.ui.tradingPair.viewmodel.TradingPairListItemTradeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.69" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.54" />

        <TextView
            android:id="@+id/tv_tradingPairName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{viewModel.time}"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/btc_usd" />

        <TextView
            android:id="@+id/tv_tradingPairLast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.price}"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tradingPairName"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tv_tradingPairName"
            tools:text="@string/last_val" />

        <TextView
            android:id="@+id/tv_tradingPairVol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@{viewModel.amount}"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tradingPairLast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tv_tradingPairLast"
            tools:text="@string/vol_usd" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="1dp"
            android:background="@color/TextViewColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tradingPairName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>